[gd_scene load_steps=16 format=3 uid="uid://bug3vueup3cd5"]

[ext_resource type="FontFile" uid="uid://bhv1ivxktavwf" path="res://Imagenes/determination-mono-web-font/DeterminationMonoWebRegular-Z5oq.ttf" id="1_fo15m"]
[ext_resource type="Script" path="res://Scripts/pausa.gd" id="1_skgx0"]
[ext_resource type="Texture2D" uid="uid://fdtpfj8x6tfb" path="res://Sprites/titulo3 (1).png" id="2_y0dce"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ew2d2"]
bg_color = Color(0, 0, 0, 0.788235)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iq1oc"]
bg_color = Color(0, 0, 0, 0.788235)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omtbm"]
bg_color = Color(0, 0, 0, 0.811765)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jhe3b"]
bg_color = Color(0, 0, 0, 0.788235)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00f1t"]
bg_color = Color(0, 0, 0, 0.811765)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x1drk"]
bg_color = Color(0, 0, 0, 0.811765)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s2pji"]
bg_color = Color(0, 0, 0, 0.788235)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eiq7d"]
bg_color = Color(0, 0, 0, 0.788235)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_f64wf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/PanelDibujado/PanelEstadisticas:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(38.2757, 21)]
}

[sub_resource type="Animation" id="Animation_0vja5"]
resource_name = "deslizarderecha"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/PanelDibujado/PanelEstadisticas:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(38.2757, 21), Vector2(410.391, 21)]
}

[sub_resource type="Animation" id="Animation_vdctb"]
resource_name = "deslizarizquierda"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/PanelDibujado/PanelEstadisticas:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.46667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(410.391, 21), Vector2(38.276, 21)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3c5ls"]
_data = {
"RESET": SubResource("Animation_f64wf"),
"deslizarderecha": SubResource("Animation_0vja5"),
"deslizarizquierda": SubResource("Animation_vdctb")
}

[node name="Pausa" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.263359, 0.27836)
size_flags_horizontal = 0
script = ExtResource("1_skgx0")

[node name="Panel" type="Panel" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ew2d2")

[node name="PanelDibujado" type="Panel" parent="Panel"]
z_index = 10
layout_mode = 0
offset_right = 1151.0
offset_bottom = 647.0
theme_override_styles/panel = SubResource("StyleBoxFlat_iq1oc")

[node name="Boton_continuar" type="Button" parent="Panel/PanelDibujado"]
z_index = 11
layout_mode = 0
offset_left = 40.0
offset_top = 277.0
offset_right = 302.0
offset_bottom = 375.0
theme_override_colors/icon_hover_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("1_fo15m")
theme_override_font_sizes/font_size = 41
theme_override_styles/hover = SubResource("StyleBoxFlat_omtbm")
theme_override_styles/normal = SubResource("StyleBoxFlat_jhe3b")
text = "CONTINUAR"

[node name="Boton_estadisticas" type="Button" parent="Panel/PanelDibujado"]
z_index = 11
layout_mode = 0
offset_left = 40.0
offset_top = 393.0
offset_right = 302.0
offset_bottom = 491.0
theme_override_fonts/font = ExtResource("1_fo15m")
theme_override_font_sizes/font_size = 41
theme_override_styles/hover = SubResource("StyleBoxFlat_00f1t")
theme_override_styles/normal = SubResource("StyleBoxFlat_jhe3b")
text = "ESTADISTICAS"

[node name="Boton_salir" type="Button" parent="Panel/PanelDibujado"]
z_index = 11
layout_mode = 0
offset_left = 40.0
offset_top = 511.0
offset_right = 302.0
offset_bottom = 609.0
theme_override_fonts/font = ExtResource("1_fo15m")
theme_override_font_sizes/font_size = 41
theme_override_styles/hover = SubResource("StyleBoxFlat_x1drk")
theme_override_styles/normal = SubResource("StyleBoxFlat_jhe3b")
text = "SALIR"

[node name="PanelPapyrus" type="Panel" parent="Panel/PanelDibujado"]
z_index = 11
layout_mode = 0
offset_left = 40.0
offset_top = 49.0
offset_right = 339.0
offset_bottom = 260.0
theme_override_styles/panel = SubResource("StyleBoxFlat_s2pji")

[node name="NombreJugador" type="RichTextLabel" parent="Panel/PanelDibujado/PanelPapyrus"]
layout_mode = 0
offset_left = 20.0
offset_top = 23.0
offset_right = 282.0
offset_bottom = 90.0
theme_override_fonts/normal_font = ExtResource("1_fo15m")
theme_override_font_sizes/normal_font_size = 41
bbcode_enabled = true
text = "PAPYRUS
"

[node name="Nivel" type="RichTextLabel" parent="Panel/PanelDibujado/PanelPapyrus"]
layout_mode = 0
offset_left = 20.0
offset_top = 75.0
offset_right = 282.0
offset_bottom = 191.0
theme_override_fonts/normal_font = ExtResource("1_fo15m")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "LV 1
HP 680
"

[node name="Titulo3(1)" type="Sprite2D" parent="Panel/PanelDibujado/PanelPapyrus"]
position = Vector2(230, 108)
scale = Vector2(0.585271, 0.611111)
texture = ExtResource("2_y0dce")

[node name="PanelEstadisticas" type="Panel" parent="Panel/PanelDibujado"]
visible = false
z_index = 10
layout_mode = 0
offset_left = 38.2757
offset_top = 21.0
offset_right = 721.276
offset_bottom = 632.0
theme_override_styles/panel = SubResource("StyleBoxFlat_eiq7d")

[node name="NombreJugador" type="RichTextLabel" parent="Panel/PanelDibujado/PanelEstadisticas"]
layout_mode = 0
offset_left = 60.0
offset_top = 60.0
offset_right = 633.0
offset_bottom = 527.0
theme_override_fonts/normal_font = ExtResource("1_fo15m")
theme_override_font_sizes/normal_font_size = 41
bbcode_enabled = true
text = "\"PAPYRUS\"

LV 1 ü§ç
HP 680 üí´

AT 20 üó°Ô∏è	EXP: 0 ‚ú®
DF 20 üõ°Ô∏è	NEXT: 10 ‚Ü¨

ARMA: Huesos
ARMADURA: Cuerpo de batalla"

[node name="Mision" type="RichTextLabel" parent="Panel/PanelDibujado"]
layout_mode = 0
offset_left = 433.0
offset_top = 162.0
offset_right = 1067.0
offset_bottom = 579.0
theme_override_fonts/normal_font = ExtResource("1_fo15m")
theme_override_font_sizes/normal_font_size = 40
text = "No hay mis√≠on principal."

[node name="MisionPrincipal" type="RichTextLabel" parent="Panel/PanelDibujado"]
layout_mode = 0
offset_left = 432.869
offset_top = 82.6268
offset_right = 899.869
offset_bottom = 161.627
theme_override_fonts/normal_font = ExtResource("1_fo15m")
theme_override_font_sizes/normal_font_size = 40
text = "Misi√≥n principal:"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3c5ls")
}
